# database

./: pyproject.toml
dynamo_db/: README.md  docker-compose.yml
sample_dj/: :q  README.md  docker-compose.yml  select int(1.3);
sample_dj/config/: settings.py
sample_dj/sample/: README.md  models.py  script.py
sample_dj/sample/migrations/: 0001_initial.py  0002_sometable.py  0003_project_project_lesson_unique.py  0004_project_project_status_check.py  0005_person.py  0006_seqtbl.py  0007_delete_person_delete_prefpopulation_delete_project_and_more.py  0008_initial.py  0009_student.py  0010_item_shop.py  0011_item_created_at.py  0012_delete_shop.py  0013_shop.py  0014_prc_amt.py  0015_rename_prc_amt_prc.py  0016_purchase.py  0017_purchase_price.py  0018_product.py
