[tool.poetry]
name = "database"
version = "0.1.0"
description = ""
authors = ["owari-taro <taro.biwajima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
